增加全部仓库列表

--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -22,6 +22,7 @@
         <span><a href="/home/queue/list?ck=03" target="_blank">「电材」</a></span>
         <span><a href="/home/queue/list?ck=04" target="_blank">「棒线」</a></span>
         <span><a href="/home/queue/list?ck=05" target="_blank">「铜排」</a></span>
+        <span><a href="/home/queue/allList" target="_blank">「全部仓库」</a></span>
     </div>
 </body>
 </html>
